--- a/Documentor/Documentor/Properties/Resources.resx
+++ b/Documentor/Documentor/Properties/Resources.resx
@@ -120,10 +120,106 @@
   <data name="AppTitle" xml:space="preserve">
     <value>GitHub Repository Documentor</value>
   </data>
+  <data name="Complete" xml:space="preserve">
+    <value>Complete</value>
+  </data>
   <data name="Copyright" xml:space="preserve">
     <value>(C)2020 Nick Beaugeard</value>
   </data>
+  <data name="CreatedOn" xml:space="preserve">
+    <value>created on</value>
+  </data>
+  <data name="CurrentOpenIssues" xml:space="preserve">
+    <value>Current Open Issues</value>
+  </data>
+  <data name="DateCreated" xml:space="preserve">
+    <value>Date Created</value>
+  </data>
+  <data name="DefaultBranch" xml:space="preserve">
+    <value>Default Branch</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>Description</value>
+  </data>
+  <data name="FullName" xml:space="preserve">
+    <value>Full Name</value>
+  </data>
+  <data name="Headers" xml:space="preserve">
+    <value>Headers</value>
+  </data>
+  <data name="IssueId" xml:space="preserve">
+    <value>Issue Id</value>
+  </data>
+  <data name="Issues" xml:space="preserve">
+    <value>Issues</value>
+  </data>
+  <data name="IssuesModified30" xml:space="preserve">
+    <value>Issues modified in last 30 days</value>
+  </data>
+  <data name="Item" xml:space="preserve">
+    <value>Item</value>
+  </data>
+  <data name="Last Update" xml:space="preserve">
+    <value>Last Update</value>
+  </data>
+  <data name="LastCodeUpdate" xml:space="preserve">
+    <value>Last Code Update</value>
+  </data>
+  <data name="Modified" xml:space="preserve">
+    <value>Modified</value>
+  </data>
+  <data name="Name" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="of" xml:space="preserve">
+    <value>of</value>
+  </data>
+  <data name="Open Issues" xml:space="preserve">
+    <value>Open Issues</value>
+  </data>
+  <data name="OverallInfo" xml:space="preserve">
+    <value>Overall Information</value>
+  </data>
   <data name="PlsWait" xml:space="preserve">
     <value>Please wait, constructing report...</value>
+  </data>
+  <data name="Project Number" xml:space="preserve">
+    <value>Project Number</value>
+  </data>
+  <data name="Project Status" xml:space="preserve">
+    <value>Project Status</value>
+  </data>
+  <data name="Projects" xml:space="preserve">
+    <value>Projects</value>
+  </data>
+  <data name="ReportTitle" xml:space="preserve">
+    <value>Project Status Report</value>
+  </data>
+  <data name="Status" xml:space="preserve">
+    <value>Status</value>
+  </data>
+  <data name="StatusReportFor" xml:space="preserve">
+    <value>Status Report for</value>
+  </data>
+  <data name="Step" xml:space="preserve">
+    <value>Step</value>
+  </data>
+  <data name="Subscribers" xml:space="preserve">
+    <value>Subscribers</value>
+  </data>
+  <data name="ThereAreNoIssuesinThisStatus" xml:space="preserve">
+    <value>There are no cards in this column</value>
+  </data>
+  <data name="Title" xml:space="preserve">
+    <value>Title</value>
+  </data>
+  <data name="URL" xml:space="preserve">
+    <value>URL</value>
+  </data>
+  <data name="Value" xml:space="preserve">
+    <value>Value</value>
+  </data>
+  <data name="Working on card" xml:space="preserve">
+    <value>Working on card</value>
   </data>
 </root>
